# catamari

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  README.md  meson.build  meson_options.txt
docs/: Makefile  conf.py  index.rst  quickstart.rst
example/: aztec_diamond.cc  dense_dpp.cc  dense_elementary_dpp.cc  dense_factorization.cc  dense_outer_product.cc  dpp_matrix_market.cc  dpp_shifted_2d_negative_laplacian.cc  factor_matrix_market.cc  helmholtz_2d_pml.cc  helmholtz_3d_pml.cc  matrix_market.cc  uniform_spanning_tree.cc
include/: catamari.h  catamari.hpp
include/catamari/: apply_sparse-impl.hpp  apply_sparse.hpp  blas-impl.hpp  blas.hpp  blas_matrix-impl.hpp  blas_matrix.hpp  blas_matrix_view-impl.hpp  blas_matrix_view.h  blas_matrix_view.hpp  buffer-impl.hpp  buffer.h  buffer.hpp  cholesky_factor-impl.hpp  cholesky_factor.hpp  complex-impl.hpp  complex.hpp  coordinate_matrix-impl.hpp  coordinate_matrix.hpp  dense_basic_linear_algebra-impl.hpp  dense_basic_linear_algebra.hpp  dense_dpp.h  dense_dpp.hpp  dense_factorizations-impl.hpp  dense_factorizations.hpp  dpp-impl.hpp  dpp.hpp  dynamic_regularization.hpp  enable_if.hpp  equilibrate_symmetric_matrix-impl.hpp  equilibrate_symmetric_matrix.hpp  fgmres-impl.hpp  fgmres.hpp  flush_to_zero.hpp  givens_rotation-impl.hpp  givens_rotation.hpp  index_utils-impl.hpp  index_utils.hpp  integers.h  integers.hpp  io_utils-impl.hpp  (+30 more)
include/catamari/blas/: genericblas.hpp  mkl.hpp  openblas.hpp  protos.hpp
include/catamari/dense_basic_linear_algebra/: openmp-impl.hpp
include/catamari/dense_dpp/: dpp_log_likelihood-impl.hpp  elementary_hermitian_dpp-impl.hpp  hermitian_dpp-impl.hpp  hermitian_dpp_openmp-impl.hpp  nonhermitian_dpp-impl.hpp  nonhermitian_dpp_openmp-impl.hpp
include/catamari/dense_factorizations/: cholesky-impl.hpp  cholesky_openmp-impl.hpp  dpp_log_likelihood-impl.hpp  elementary_hermitian_dpp-impl.hpp  elementary_hermitian_dpp_openmp-impl.hpp  hermitian_dpp-impl.hpp  hermitian_dpp_openmp-impl.hpp  ldl_adjoint-impl.hpp  ldl_adjoint_openmp-impl.hpp  ldl_transpose-impl.hpp  ldl_transpose_openmp-impl.hpp  nonhermitian_dpp-impl.hpp  nonhermitian_dpp_openmp-impl.hpp  openmp-impl.hpp  pivoted_ldl_adjoint-impl.hpp  pivoted_ldl_adjoint_openmp-impl.hpp
include/catamari/dpp/: scalar_dpp-impl.hpp  scalar_dpp.hpp  supernodal_dpp-impl.hpp  supernodal_dpp.hpp
include/catamari/dpp/supernodal_dpp/: common-impl.hpp  common_openmp-impl.hpp  left_looking-impl.hpp  left_looking_openmp-impl.hpp  openmp-impl.hpp  right_looking-impl.hpp  right_looking_openmp-impl.hpp
include/catamari/lapack/: protos.hpp
include/catamari/ldl/: scalar_ldl-impl.hpp  scalar_ldl.hpp  supernodal_ldl-impl.hpp  supernodal_ldl.hpp
include/catamari/ldl/scalar_ldl/: factorization-impl.hpp  factorization.hpp  scalar_utils-impl.hpp  scalar_utils.hpp
include/catamari/ldl/scalar_ldl/factorization/: common-impl.hpp  io-impl.hpp  left_looking-impl.hpp  solve-impl.hpp  up_looking-impl.hpp
include/catamari/ldl/scalar_ldl/scalar_utils/: openmp-impl.hpp
include/catamari/ldl/supernodal_ldl/: diagonal_factor-impl.hpp  diagonal_factor.hpp  factorization-impl.hpp  factorization.hpp  form_supernodes-impl.hpp  form_supernodes.hpp  io-impl.hpp  io.hpp  lower_factor-impl.hpp  lower_factor.hpp  solve-impl.hpp  solve.hpp  supernode_utils-impl.hpp  supernode_utils.hpp
include/catamari/ldl/supernodal_ldl/factorization/: common-impl.hpp  common_openmp-impl.hpp  io-impl.hpp  left_looking-impl.hpp  left_looking_openmp-impl.hpp  openmp-impl.hpp  right_looking-impl.hpp  right_looking_openmp-impl.hpp  solve-impl.hpp  solve_openmp-impl.hpp
include/catamari/ldl/supernodal_ldl/supernode_utils/: openmp-impl.hpp
include/catamari/sparse_hermitian_dpp/: scalar-impl.hpp  scalar.hpp  supernodal.hpp
include/catamari/sparse_hermitian_dpp/supernodal/: common-impl.hpp  common_openmp-impl.hpp  left_looking-impl.hpp  left_looking_openmp-impl.hpp  right_looking-impl.hpp  right_looking_openmp-impl.hpp
include/catamari/sparse_ldl/: scalar.hpp  supernodal.hpp
include/catamari/sparse_ldl/scalar/: factorization.hpp  scalar_utils-impl.hpp  scalar_utils.hpp
include/catamari/sparse_ldl/scalar/factorization/: common-impl.hpp  io-impl.hpp  left_looking-impl.hpp  solve-impl.hpp  up_looking-impl.hpp
include/catamari/sparse_ldl/scalar/scalar_utils/: openmp-impl.hpp
include/catamari/sparse_ldl/supernodal/: catamari_config.hh  diagonal_factor-impl.hpp  diagonal_factor.hpp  factorization.hpp  lower_factor-impl.hpp  lower_factor.hpp  supernode_utils-impl.hpp  supernode_utils.hpp
include/catamari/sparse_ldl/supernodal/factorization/: SchurComplementStorage.hpp  common-impl.hpp  common_openmp-impl.hpp  io-impl.hpp  left_looking-impl.hpp  left_looking_openmp-impl.hpp  right_looking-impl.hpp  right_looking_openmp-impl.hpp  solve-impl.hpp  solve_openmp-impl.hpp
include/catamari/sparse_ldl/supernodal/supernode_utils/: openmp-impl.hpp
include/catamari/supernodal_ldl/: diagonal_factor-impl.hpp  diagonal_factor.hpp  factorization.hpp  form_supernodes-impl.hpp  form_supernodes.hpp  io-impl.hpp  io.hpp  lower_factor-impl.hpp  lower_factor.hpp  solve-impl.hpp  solve.hpp
python/: catamari.py
scripts/: download-tests.sh  run-clang-format.sh
src/: buffer_c.cc  catamari_c.cc  dense_dpp_c.cc
subprojects/: mantis.wrap  quotient.wrap  specify.wrap
test/: complex_test.cc  coordinate_matrix_test.cc  dense_factorization_test.cc  dynamic_regularization_test.cc  fgmres_test.cc  givens_rotation_test.cc  laplacian_test.cc
test/matrix_market/: less_small.mtx  medium.mtx  rothberg_gupta_fig1.mtx  small.mtx
