#
# Copyright (c) 2018 Jack Poulson <jack@hodgestar.com>
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#

option('disable-tcmalloc',
    type : 'boolean',
    value : true,
    description : 'disable libtcmalloc allocation?')

option('disable-blas',
    type : 'boolean',
    value : false,
    description : 'disable BLAS support?')

option('disable-mkl',
    type : 'boolean',
    value : false,
    description : 'disable Intel MKL support?')

option('disable-openblas',
    type : 'boolean',
    value : false,
    description : 'disable OpenBLAS support?')

option('use-64bit',
    type : 'boolean',
    value : true,
    description : 'use 64-bit integers for representing indices?')

option('strong-hashes',
    type : 'boolean',
    value : false,
    description : 'use a more expensive, but better supervariable hash?')

option('enable-timers',
    type : 'boolean',
    value : false,
    description : 'enable code for timing components?')

option('enable-debug',
    type : 'boolean',
    value : false,
    description : 'enable extra debugging assertions?')

option('enable-openmp',
    type : 'boolean',
    value : false,
    description : 'demand OpenMP support?')

option('disable-openmp',
    type : 'boolean',
    value : false,
    description : 'disable OpenMP support?')
