#
# Copyright (c) 2018 Jack Poulson <jack@hodgestar.com>
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#

option('disable_xmmintrin',
    type : 'boolean',
    value : false,
    description : 'prevents usage of xmmintrin')

option('disable_fenv_disable_denorms',
    type : 'boolean',
    value : false,
    description : 'prevents usage of FE_DFL_DISABLE_SSE_DENORMS_ENV')

option('disable_tcmalloc',
    type : 'boolean',
    value : true,
    description : 'disable libtcmalloc allocation?')

option('disable_blas',
    type : 'boolean',
    value : false,
    description : 'disable BLAS support?')

option('disable_mkl',
    type : 'boolean',
    value : false,
    description : 'disable Intel MKL support?')

option('disable_openblas',
    type : 'boolean',
    value : false,
    description : 'disable OpenBLAS support?')

option('use_64bit',
    type : 'boolean',
    value : true,
    description : 'use 64-bit integers for representing indices?')

option('strong_hashes',
    type : 'boolean',
    value : false,
    description : 'use a more expensive, but better supervariable hash?')

option('enable_timers',
    type : 'boolean',
    value : false,
    description : 'enable code for timing components?')

option('enable_debug',
    type : 'boolean',
    value : false,
    description : 'enable extra debugging assertions?')

option('enable_openmp',
    type : 'boolean',
    value : false,
    description : 'demand OpenMP support?')

option('disable_openmp',
    type : 'boolean',
    value : false,
    description : 'disable OpenMP support?')

option('disable_gcc_fma',
    type : 'boolean',
    value : false,
    description : 'disable GCC FMA intrinsic fallback?')

option('disable_xlc_fma',
    type : 'boolean',
    value : false,
    description : 'disable XLC FMA intrinsic fallback?')

option('ieee_sum',
    type : 'boolean',
    value : false,
    description : 'enable IEEE double-mantissa summation?')
